--- a/index.html
+++ b/index.html
@@ -279,6 +279,47 @@
       .committee-title{font-size:1.15rem;}
     }
 
+    /* ===== FIX 1: About/Scope section centered ===== */
+    .about-center{
+      max-width: 900px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .about-center p{
+      text-align: center !important;
+      max-width: 820px;
+      margin: 0 auto;
+    }
+    .about-center .pill-wrap{
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:center;
+      margin-top: 14px;
+    }
+
+    /* ===== FIX 2: Supported logos aligned properly ===== */
+    .supported-logos{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:22px;
+      flex-wrap:wrap;
+      margin-top: 10px;
+    }
+    .supported-logos img{
+      height:64px;
+      width:auto;
+      object-fit:contain;
+      background:#fff;
+      border:1px solid rgba(2,6,23,.10);
+      border-radius:14px;
+      padding:10px 14px;
+      box-shadow: 0 10px 22px rgba(2,6,23,.08);
+    }
+    @media (max-width: 576px){
+      .supported-logos img{height:54px; padding:10px 12px;}
+    }
+
     /* Footer */
     footer{
       background: var(--olive-900);
@@ -339,7 +380,7 @@
           </h1>
 
           <div class="mt-3">
-            <span class="badge-date">March 21–22, 2026</span>
+            <span class="badge-date">March 21 – 22, 2026</span>
           </div>
 
           <div class="dept mt-4" style="max-width:820px; margin-left:auto; margin-right:auto;">
@@ -375,38 +416,29 @@
           <h3>Scope of the Event</h3>
         </div>
 
-        <div class="row align-items-center">
-          <div class="col-lg-7">
-            <div class="cardx">
-              <p style="text-align:justify; font-size: 1.02rem; line-height:1.75;">
-                This symposium brings together various researchers from different parts of the world to brainstorm on the state-of-the-art
-                in the field of algal and organic waste based biorefinery. The biorefinery concept is pursued world-wide to develop economically
-                viable and environmentally sustainable innovative and integrated technologies for the valorization of organic waste materials.
-                The biorefinery develops various processes, such as hydrothermal liquefaction (HTL), for the production of fuels and valuable
-                chemicals. The symposium also covers the topics based on low carbon fuels. The bioeconomy is a rapidly growing field in which
-                low carbon footprint technologies are being developed, supporting to mitigate climate-change. The symposium covers broad thematic
-                areas as mentioned below.
-              </p>
+        <!-- ✅ CENTERED SCOPE -->
+        <div class="about-center">
+          <div class="cardx">
+            <p style="font-size: 1.02rem; line-height:1.75;">
+              This symposium brings together various researchers from different parts of the world to brainstorm on the state-of-the-art
+              in the field of algal and organic waste based biorefinery. The biorefinery concept is pursued world-wide to develop economically
+              viable and environmentally sustainable innovative and integrated technologies for the valorization of organic waste materials.
+              The biorefinery develops various processes, such as hydrothermal liquefaction (HTL), for the production of fuels and valuable
+              chemicals. The symposium also covers the topics based on low carbon fuels. The bioeconomy is a rapidly growing field in which
+              low carbon footprint technologies are being developed, supporting to mitigate climate-change. The symposium covers broad thematic
+              areas as mentioned below.
+            </p>
 
-              <div class="mt-3">
-                <span class="pill">Algal biorefinery</span>
-                <span class="pill">Organic waste biorefinery</span>
-                <span class="pill">HTL &amp; bio-crude</span>
-                <span class="pill">Techno-economics</span>
-                <span class="pill">Life-cycle analysis</span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Optional image column (hidden unless you add image) -->
-          <div class="col-lg-5 mt-3 mt-lg-0 d-none d-lg-block">
-            <div class="cardx p-0 overflow-hidden">
-              <!-- Uncomment if you add image:
-              <img src="assets/about.jpg" alt="About" class="img-fluid">
-              -->
+            <div class="pill-wrap">
+              <span class="pill">Algal biorefinery</span>
+              <span class="pill">Organic waste biorefinery</span>
+              <span class="pill">HTL &amp; bio-crude</span>
+              <span class="pill">Techno-economics</span>
+              <span class="pill">Life-cycle analysis</span>
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
@@ -604,10 +636,13 @@
           <div class="col-lg-5 mt-3 mt-lg-0">
             <div class="cardx">
               <h5 class="font-weight-bold">Supported by</h5>
-              <div class="d-flex align-items-center" style="gap:14px; flex-wrap:wrap;">
-                <img src="assets/iitg.png" alt="IIT Guwahati" style="max-height:80px; width:auto;">
-                <img src="assets/parc.jpeg" alt="PARC" style="max-height:80px; width:auto;">
+
+              <!-- ✅ ALIGNED LOGOS -->
+              <div class="supported-logos">
+                <img src="assets/iitg.png" alt="IIT Guwahati">
+                <img src="assets/parc.jpeg" alt="PARC">
               </div>
+
             </div>
           </div>
         </div>
