--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       #intro img{width:92px !important;height:92px !important;}
     }
 
-    /* Topics + Speakers (2-col on desktop, 1-col on mobile) */
+    /* Topics + Speakers */
     .topics-wrap, .speakers-wrap{max-width:980px;margin:0 auto;}
     .topics-grid, .speakers-grid{
       display:grid;
@@ -279,45 +279,90 @@
       .committee-title{font-size:1.15rem;}
     }
 
-    /* ===== FIX 1: About/Scope section centered ===== */
+    /* ===== Scope: better font treatment ===== */
     .about-center{
-      max-width: 900px;
+      max-width: 950px;
       margin: 0 auto;
       text-align: center;
     }
+    .about-center .cardx{
+      padding: 26px 24px;
+    }
     .about-center p{
       text-align: center !important;
-      max-width: 820px;
+      max-width: 860px;
       margin: 0 auto;
+      font-size: 1.08rem;
+      line-height: 1.85;
+      font-weight: 500;
+      color: #111827;
+      letter-spacing: .01em;
     }
     .about-center .pill-wrap{
       display:flex;
       flex-wrap:wrap;
       justify-content:center;
-      margin-top: 14px;
+      margin-top: 16px;
     }
 
-    /* ===== FIX 2: Supported logos aligned properly ===== */
+    /* ===== Contact: better font treatment ===== */
+    #contact .cardx{
+      padding: 24px;
+    }
+    #contact h5{
+      font-weight: 900;
+      letter-spacing: -.01em;
+      margin-bottom: 12px;
+    }
+    #contact p, #contact li{
+      font-size: 1.02rem;
+      line-height: 1.75;
+      font-weight: 500;
+      color:#0f172a;
+    }
+    #contact a{font-weight:800;}
+
+    /* ===== Supported: logos fill the card nicely ===== */
     .supported-logos{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap:14px;
+      margin-top: 14px;
+      align-items: stretch;
+    }
+    .supported-logos .logo-box{
       display:flex;
       align-items:center;
       justify-content:center;
-      gap:22px;
-      flex-wrap:wrap;
-      margin-top: 10px;
-    }
-    .supported-logos img{
-      height:64px;
-      width:auto;
-      object-fit:contain;
       background:#fff;
       border:1px solid rgba(2,6,23,.10);
-      border-radius:14px;
-      padding:10px 14px;
+      border-radius:16px;
+      padding:16px;
       box-shadow: 0 10px 22px rgba(2,6,23,.08);
+      min-height: 140px;
+    }
+    .supported-logos img{
+      max-width: 100%;
+      max-height: 105px;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+      border-radius: 0;
+      box-shadow: none;
+      border: none;
+      background: transparent;
+      padding: 0;
     }
     @media (max-width: 576px){
-      .supported-logos img{height:54px; padding:10px 12px;}
+      .supported-logos{
+        grid-template-columns: 1fr;
+      }
+      .supported-logos .logo-box{
+        min-height: 120px;
+      }
+      .supported-logos img{
+        max-height: 95px;
+      }
     }
 
     /* Footer */
@@ -416,10 +461,9 @@
           <h3>Scope of the Event</h3>
         </div>
 
-        <!-- ✅ CENTERED SCOPE -->
         <div class="about-center">
           <div class="cardx">
-            <p style="font-size: 1.02rem; line-height:1.75;">
+            <p>
               This symposium brings together various researchers from different parts of the world to brainstorm on the state-of-the-art
               in the field of algal and organic waste based biorefinery. The biorefinery concept is pursued world-wide to develop economically
               viable and environmentally sustainable innovative and integrated technologies for the valorization of organic waste materials.
@@ -610,7 +654,7 @@
         <div class="row">
           <div class="col-lg-7">
             <div class="cardx">
-              <h5 class="font-weight-bold">Conveners</h5>
+              <h5>Conveners</h5>
               <ul class="list-clean mb-3">
                 <li>Dr. Vaibhav V Goud, Professor, Department of Chemical Engineering, IIT Guwahati</li>
                 <li>Dr Ajay K Dalai, Professor, University of Saskatchewan, Canada</li>
@@ -637,10 +681,13 @@
             <div class="cardx">
               <h5 class="font-weight-bold">Supported by</h5>
 
-              <!-- ✅ ALIGNED LOGOS -->
               <div class="supported-logos">
-                <img src="assets/iitg.png" alt="IIT Guwahati">
-                <img src="assets/parc.jpeg" alt="PARC">
+                <div class="logo-box">
+                  <img src="assets/iitg.png" alt="IIT Guwahati">
+                </div>
+                <div class="logo-box">
+                  <img src="assets/parc.jpeg" alt="PARC">
+                </div>
               </div>
 
             </div>
@@ -677,3 +724,5 @@
 
 </body>
 </html>
+
+
