--- a/index.html
+++ b/index.html
@@ -726,6 +726,26 @@
     });
   </script>
 
+  <script>
+    // Auto-close mobile navbar after clicking a link
+    (function () {
+      var nav = document.getElementById("nav");
+      if (!nav) return;
+  
+      var navLinks = nav.querySelectorAll("a.nav-link");
+  
+      navLinks.forEach(function (link) {
+        link.addEventListener("click", function () {
+          // Only close if navbar is currently shown (mobile)
+          if (nav.classList.contains("show")) {
+            $(".navbar-toggler").click(); // Bootstrap 4 + jQuery way
+          }
+        });
+      });
+    })();
+  </script>
+  
+
 </body>
 </html>
 
